# media-editor

./: CLAUDE.md  LICENSE  README.md  pyproject.toml
.claude/: settings.json
.github/workflows/: ci.yml
src/media_editor/: __init__.py  cli.py  server.py
src/media_editor/tools/: audio.py  video.py
tests/: test_audio.py  test_video.py
